--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "font-awesome": "^4.2.0"
   },
   "devDependencies": {
+    "bootstrap-sass": "^3.3.1",
     "brfs": "^1.2.0",
     "browser-sync": "^1.7.0",
     "gulp": "^3.8.7",
