--- a/package.json
+++ b/package.json
@@ -13,17 +13,33 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.1",
-    "font-awesome": "^4.2.0"
+    "bootstrap-sass": "^3.3.1",
+    "font-awesome": "^4.2.0",
+    "lodash": "^2.4.1"
+  },
+  "browserify": {
+    "transform": [
+      "browserify-shim"
+    ]
+  },
+  "browserify-shim": {
+    "angular": "global:angular",
+    "lodash": "global:_"
   },
   "devDependencies": {
-    "bootstrap-sass": "^3.3.1",
     "brfs": "^1.2.0",
     "browser-sync": "^1.7.0",
+    "browserify": "^6.3.2",
+    "browserify-shim": "^3.8.0",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.4.2",
+    "gulp-data": "^1.1.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-notify": "^2.0.1",
+    "gulp-prettify": "^0.3.0",
+    "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
+    "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "pretty-hrtime": "^0.2.2",
