--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "browser-sync": "^1.7.0",
     "browserify": "^6.3.2",
     "browserify-shim": "^3.8.0",
+    "exorcist": "^0.1.6",
     "gulp": "^3.8.7",
     "gulp-concat": "^2.4.2",
     "gulp-data": "^1.1.1",
