--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^3.3.1",
     "bootstrap-sass": "^3.3.1",
     "font-awesome": "^4.2.0",
+    "jquery": "^2.1.3",
     "lodash": "^2.4.1"
   },
   "browserify": {
