--- a/package.json
+++ b/package.json
@@ -12,42 +12,40 @@
     "url": "https://github.com/MoonshotProject/moonlight.git"
   },
   "dependencies": {
-    "bootstrap": "^3.3.1",
-    "bootstrap-sass": "^3.3.1",
+    "bootstrap": "^3.3.2",
+    "bootstrap-sass": "^3.3.3",
     "font-awesome": "^4.2.0",
     "jquery": "^2.1.3",
-    "lodash": "^2.4.1"
+    "lodash": "^3.0.0"
+  },
+  "devDependencies": {
+    "brfs": "^1.2.0",
+    "browser-sync": "^1.9.1",
+    "browserify": "^8.1.1",
+    "browserify-shim": "^3.8.2",
+    "exorcist": "^0.1.6",
+    "gulp": "^3.8.10",
+    "gulp-concat": "^2.4.3",
+    "gulp-data": "^1.1.1",
+    "gulp-minify-css": "^0.4.2",
+    "gulp-notify": "^2.1.0",
+    "gulp-prettify": "^0.3.0",
+    "gulp-sass": "^1.3.2",
+    "gulp-sourcemaps": "^1.3.0",
+    "gulp-streamify": "0.0.5",
+    "gulp-swig": "^0.7.4",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.2",
+    "pretty-hrtime": "^1.0.0",
+    "require-dir": "0.1.0",
+    "vinyl-source-stream": "^1.0.0",
+    "vinyl-transform": "^1.0.0",
+    "watchify": "^2.2.1"
   },
   "browserify": {
     "transform": [
       "browserify-shim"
     ]
   },
-  "browserify-shim": {
-    "angular": "global:angular",
-    "lodash": "global:_"
-  },
-  "devDependencies": {
-    "brfs": "^1.2.0",
-    "browser-sync": "^1.7.0",
-    "browserify": "^6.3.2",
-    "browserify-shim": "^3.8.0",
-    "exorcist": "^0.1.6",
-    "gulp": "^3.8.7",
-    "gulp-concat": "^2.4.2",
-    "gulp-data": "^1.1.1",
-    "gulp-minify-css": "^0.3.11",
-    "gulp-notify": "^2.0.1",
-    "gulp-prettify": "^0.3.0",
-    "gulp-sass": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.8",
-    "gulp-swig": "^0.7.4",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "pretty-hrtime": "^0.2.2",
-    "require-dir": "0.1.0",
-    "vinyl-source-stream": "^1.0.0",
-    "vinyl-transform": "^0.0.1",
-    "watchify": "^2.1.1"
-  }
+  "browserify-shim": {}
 }
