--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "https://github.com/MoonshotProject/moonlight.git"
   },
   "dependencies": {
+    "animate.css": "^3.1.1",
     "bootstrap": "^3.3.2",
     "bootstrap-sass": "^3.3.3",
     "font-awesome": "^4.2.0",
