--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "bootstrap-sass": "^3.3.3",
     "font-awesome": "^4.3.0",
     "jquery": "^2.1.3",
-    "lodash": "^3.0.0"
+    "lodash": "^3.0.1"
   },
   "devDependencies": {
-    "brfs": "^1.2.0",
-    "browser-sync": "^1.9.1",
-    "browserify": "^8.1.1",
+    "brfs": "^1.3.0",
+    "browser-sync": "^2.0.0-rc4",
+    "browserify": "^8.1.3",
     "browserify-shim": "^3.8.2",
     "exorcist": "^0.1.6",
     "gulp": "^3.8.10",
@@ -36,12 +36,12 @@
     "gulp-streamify": "0.0.5",
     "gulp-swig": "^0.7.4",
     "gulp-uglify": "^1.1.0",
-    "gulp-util": "^3.0.2",
+    "gulp-util": "^3.0.3",
     "pretty-hrtime": "^1.0.0",
     "require-dir": "0.1.0",
     "vinyl-source-stream": "^1.0.0",
     "vinyl-transform": "^1.0.0",
-    "watchify": "^2.2.1"
+    "watchify": "^2.3.0"
   },
   "browserify": {
     "transform": [
